css/site.css
@import url(http://fonts.googleapis.com/css?family=Montserrat);

h1, h2, h3, h4, h5 {
    font-family: 'Montserrat', sans-serif;
    text-transform: uppercase;
    text-align:center;
}

.navbar-wrapper {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    z-index: 20;
}

@media (min-width: 768px) {
    .navbar-wrapper {
        margin-top: 20px;
    }
}

.heroArea {
    height: 200px;
    background: linear-gradient(135deg, #666 25%, transparent 25%) -50px 0, linear-gradient(225deg, #666 25%, transparent 25%) -50px 0, linear-gradient(315deg, #666 25%, transparent 25%), linear-gradient(45deg, #666 25%, transparent 25%);
    background-size: 100px 100px;
    background-color: #444;
    width: 100%;
    text-align: center;
    color: #eee;
    box-shadow: #333 0px 5px;

}

    .heroArea h2 {
        display: inline-block;
        margin-top: 0px;
        padding-top: 100px;
        font-family: 'Montserrat', sans-serif;
        text-transform: uppercase;
        font-size: 20px;
        max-width: 500px;
        -webkit-text-shadow: 2px 1px 0px #000, 3px 3px 0px #000;
        text-shadow: 2px 1px 0px #000, 3px 3px 0px #000;
    }

.navbar-inverse .navbar-brand {
    background-color: #111;
    color: #fff;
    font-family: 'Montserrat', sans-serif;
    text-transform: uppercase;
    font-size: 14px;
}

.img-logo {
    position: absolute;
    left: -10px;
    top: -23px;
    background-color: #222;

}


.img-circle {
    border: solid 2px #111;
}

@media (min-width: 768px) {
    .navbar > .container .navbar-brand {
        margin-left: 70px;
    }
}

